content margin-top and overflow auto quick fix

--- a/public/style.css
+++ b/public/style.css
@@ -153,8 +153,9 @@ body {
 }
 
 .content {
-    margin-top: 3rem;
+    margin-top: 4rem;
     margin-bottom: 3rem;
+    overflow: auto;
 }
 
 
